# SlugArch

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  PLAN_STATUS.md  README.md
crates/slugarch-backend/: Cargo.toml
crates/slugarch-backend/src/: descriptor.rs  lib.rs
crates/slugarch-backend/src/bindings/: gemm_ip.rs  mod.rs  noc_mesh.rs  npu_cluster.rs  npu_seed_g.rs  ptx_emulation.rs  systolic.rs
crates/slugarch-bench/: Cargo.toml  build.rs
crates/slugarch-bench/src/: main.rs
crates/slugarch-cli/: Cargo.toml
crates/slugarch-cli/src/: main.rs
crates/slugarch-cxl-wire/: Cargo.toml
crates/slugarch-cxl-wire/src/: decode.rs  encode.rs  error.rs  flit.rs  lib.rs  msg.rs
crates/slugarch-cxl-wire/tests/: proptest_round_trip.rs
crates/slugarch-fabric/: Cargo.toml
crates/slugarch-fabric/src/: cpu_emu.rs  engine.rs  error.rs  lib.rs  record.rs
crates/slugarch-fabric/tests/: determinism.rs  gemm_e2e.rs  value_preservation.rs
crates/slugarch-host/: Cargo.toml
crates/slugarch-host/src/: dispatch.rs  error.rs  host.rs  job.rs  lib.rs  result.rs
crates/slugarch-host/tests/: determinism.rs  gemm_cxl_e2e.rs  tag_mismatch.rs
crates/slugarch-ir/: Cargo.toml
crates/slugarch-ir/src/: error.rs  graph.rs  lib.rs  module.rs  op.rs  pass.rs  serialize.rs  types.rs
crates/slugarch-ir/src/passes/: assign_tokens.rs  fuse_decode_ops.rs  mod.rs  select_backend.rs  validate_against_rtlmap.rs
crates/slugarch-ir/tests/: pipeline_smoke.rs  serialize_proptest.rs
crates/slugarch-ptx-frontend/: Cargo.toml
crates/slugarch-ptx-frontend/src/: error.rs  lib.rs
crates/slugarch-ptx-frontend/src/lower/: arith.rs  bit_ops.rs  control.rs  ld_st.rs  mma.rs  mod.rs  transcendental.rs
crates/slugarch-ptx-frontend/tests/: entry_extract.rs  lower_arith.rs  lower_control.rs  lower_emu_ops.rs  lower_ld_st.rs  lower_mma.rs  parse_smoke.rs  real_kernels.rs
crates/slugarch-verilator/: Cargo.toml
crates/slugarch-verilator-sys/: Cargo.toml  build.rs
crates/slugarch-verilator-sys/shim/: ip_shim.cpp  ip_shim.h
crates/slugarch-verilator-sys/src/: lib.rs
crates/slugarch-verilator-sys/tests/: all_ips_smoke.rs  systolic_4x4_smoke.rs
crates/slugarch-verilator/src/: impls.rs  lib.rs  wire.rs
crates/slugarch-verilator/tests/: slugcxl_smoke.rs  trait_smoke.rs
crates/slugcxl-gen/: Cargo.toml
crates/slugcxl-gen/src/: config.rs  emit_endpoint.rs  emit_runtime.rs  emit_top.rs  main.rs
crates/slugcxl-gen/src/snapshots/: slugcxl_gen__emit_endpoint__tests__snapshot_endpoint_sv.snap  slugcxl_gen__emit_runtime__tests__snapshot_runtime_json.snap  slugcxl_gen__emit_top__tests__snapshot_top_sv.snap
tests/fixtures/: README.md  gemm.ptx  identity_times_const.json
