[workspace]
resolver = "2"
members = [
    "crates/slugarch-ir",
    "crates/slugarch-ptx-frontend",
    "vendor/concordia-ptx/ptx_parser",
    "vendor/concordia-ptx/ptx_parser_macros",
    "vendor/concordia-ptx/ptx_parser_macros_impl",
]

[workspace.package]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
# `repository` intentionally omitted until SlugArch has a public home; add it
# when the repo is first pushed to a remote.

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
proptest = "1"
insta = { version = "1", features = ["json", "yaml"] }
anyhow = "1"
