[workspace]
resolver = "2"
members = [
    "crates/slugarch-ir",
    "crates/slugarch-ptx-frontend",
    "crates/slugarch-verilator",
    "crates/slugarch-verilator-sys",
    "vendor/concordia-ptx/ptx_parser",
    "vendor/concordia-ptx/ptx_parser_macros",
    "vendor/concordia-ptx/ptx_parser_macros_impl",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
# `repository` intentionally omitted until SlugArch has a public home; add it
# when the repo is first pushed to a remote.

[workspace.dependencies]
anyhow = "1"
bincode = "1.3"
bindgen = "0.69"
cc = "1"
insta = { version = "1", features = ["json", "yaml"] }
petgraph = { version = "0.6", features = ["serde-1"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
