[package]
name = "slugarch-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "slugarch"
path = "src/main.rs"

[dependencies]
slugarch-ir = { path = "../slugarch-ir" }
slugarch-ptx-frontend = { path = "../slugarch-ptx-frontend" }
slugarch-backend = { path = "../slugarch-backend" }
slugarch-fabric = { path = "../slugarch-fabric" }
slugarch-host = { path = "../slugarch-host" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
