[package]
name = "slugarch-fabric"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
slugarch-ir = { path = "../slugarch-ir" }
slugarch-backend = { path = "../slugarch-backend" }
slugarch-verilator = { path = "../slugarch-verilator" }
slugarch-ptx-frontend = { path = "../slugarch-ptx-frontend" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
