[package]
name = "slugarch-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
slugarch-ir = { path = "../slugarch-ir" }
slugarch-cxl-wire = { path = "../slugarch-cxl-wire" }
slugarch-verilator = { path = "../slugarch-verilator" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
