[package]
name = "slugarch-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
petgraph.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
