[package]
name = "slugarch-ptx-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ptx_parser = { path = "../../vendor/concordia-ptx/ptx_parser" }
slugarch-ir = { path = "../slugarch-ir" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
